--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     </section>
 
     <section class="main-content">
+      
+            <h3>Google Chart Experiments</h3>
+
+<p>View Google Chart Experiments <a href="/chart/">Chart Playground</a></p>
+
+<h3>
+  
+  
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
