--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
             <h3>Google Chart Experiments</h3>
 
-<p>View Google Chart Experiments <a href="/chart/">Chart Playground</a></p>
+<p>View Google Chart Experiments <a href="https://oxosolutions.github.io/rc/chart/">Chart Playground</a></p>
 
 <h3>
   
