--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Resource Center</h1>
       <h2 class="project-tagline">OXO Solutions Resource Center</h2>
+      <a href="https://oxosolutions.github.io/rc/chart/" class="btn">Google Chart Experiments</a>
       <a href="https://github.com/oxosolutions/rc" class="btn">View on GitHub</a>
       <a href="https://github.com/oxosolutions/rc/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/oxosolutions/rc/tarball/master" class="btn">Download .tar.gz</a>
