--- a/chart/index.html
+++ b/chart/index.html
@@ -83,23 +83,24 @@
 		</script>
 	</head>
 	<body style="font-family: Arial;border: 0 none;">
-		<input id="info_button" type="button" value="Get Chart Info" />
-		
-		<div id="filters">
-			<select id="chart_type">
-				<option value="">Select Chart Type</option>
-				<option value="ColumnChart">Column Chart</option>
-				<option value="BarChart">Bar Chart</option>
-				<option value="AreaChart">Area Chart</option>
-				<option value="PieChart">Pie Chart</option>
-			</select>
-			<select id="chart_type">
-				<option value="">Select Chart Type</option>
-				<option value="ColumnChart">Column Chart</option>
-				<option value="BarChart">Bar Chart</option>
-				<option value="AreaChart">Area Chart</option>
-				<option value="PieChart">Pie Chart</option>
-			</select>
+		<div class="chart-filter">
+			<input id="info_button" type="button" value="Get Chart Info" />
+			<div id="filters">
+				<select id="chart_type">
+					<option value="">Select Chart Type</option>
+					<option value="ColumnChart">Column Chart</option>
+					<option value="BarChart">Bar Chart</option>
+					<option value="AreaChart">Area Chart</option>
+					<option value="PieChart">Pie Chart</option>
+				</select>
+				<select id="chart_type">
+					<option value="">Select Chart Type</option>
+					<option value="ColumnChart">Column Chart</option>
+					<option value="BarChart">Bar Chart</option>
+					<option value="AreaChart">Area Chart</option>
+					<option value="PieChart">Pie Chart</option>
+				</select>
+			</div>
 		</div>
 		<div id="info">
 
